tests/ui/consts/unstable-const-fn-in-libcore.stderr
error[E0493]: destructor of `F` cannot be evaluated at compile-time
  --> $DIR/unstable-const-fn-in-libcore.rs:19:61
   |
LL |     const fn unwrap_or_else<F: [const] FnOnce() -> T>(self, f: F) -> T {
   |                                                             ^ the destructor for this type cannot be evaluated in constant functions
...
LL |     }
   |     - value is dropped here

error[E0493]: destructor of `Opt<T>` cannot be evaluated at compile-time
  --> $DIR/unstable-const-fn-in-libcore.rs:19:55
   |
LL |     const fn unwrap_or_else<F: [const] FnOnce() -> T>(self, f: F) -> T {
   |                                                       ^^^^ the destructor for this type cannot be evaluated in constant functions
...
LL |     }
   |     - value is dropped here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0493`.
